ingress/ingress-rule-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress-rule
  annotations:
    cert-manager.io/cluster-issuer: "self-signed"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.example.com
    secretName: myingress-cert
  rules:
  - host: test.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-app-clusterip
              port: 
                number: 80
